kubernetes/argocd/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app-ingress: ""
    app.kubernetes.io/instance: argocd
    kubernetes.io/metadata.name: openshift-gitops-operator
    openshift.io/cluster-monitoring: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
  name: openshift-gitops-operator
