kubernetes/argocd/base/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: openshift-gitops-operator
spec:
  egress:
    # Control Plane (for Kube API)
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
